--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,67 @@
-img {
-    width: 373;
-    height: 248;
+* {
+    font-family: Helvetica, sans-serif;
+    font-size: 20px;
+}
+
+body {
+    background: #141414;
+}
+
+.div-centrado {
+    position: relative;
+    left: 50px;
+    top: 40px;
+}
+
+.logo-netflix {
+    margin-left: 40px;
+}
+
+.div-centrado__titulo {
+    color: white;
+}
+
+.div-centrado__subtitulo {
+    color: grey;
+    border-bottom: 1px solid grey;
+    padding-bottom: 20px;
+}
+
+.logo-usuario {
+    margin: 20px;
+    border-bottom: 1px solid grey;
+    padding-bottom: 30px;
+}
+
+.input-usuario {
+    width: 350px;
+    height: 25px;
+    display: inline-block;
+    position: relative;
+    top: -250px;
+    outline: none;
+    background: #666;
+    color: #fff;
+    border: 1px solid transparent;
+}
+
+.input-usuario::placeholder {
+    color: #fff;
+}
+
+.checkbox-infantil {
+    display: inline-block;
+    position: relative;
+    top: -250px;
+    left: 120px;
+    width: 20px;
+    height: 20px;
+}
+
+.label-infantil {
+    display: inline-block;
+    position: relative;
+    top: -250px;
+    left: 120px;
+    color: #fff;
 }
