--- a/styles.css
+++ b/styles.css
@@ -7,10 +7,12 @@ body {
     background: #141414;
 }
 
+/*Contenedor central*/
 .div-centrado {
     position: relative;
-    left: 50px;
-    top: 40px;
+    margin: 40px auto;
+    width: 700px;
+    height: 700px;
 }
 
 .logo-netflix {
@@ -38,7 +40,7 @@ body {
     height: 25px;
     display: inline-block;
     position: relative;
-    top: -250px;
+    top: -220px;
     outline: none;
     background: #666;
     color: #fff;
@@ -49,11 +51,12 @@ body {
     color: #fff;
 }
 
+/*Checkbox*/
 .checkbox-infantil {
     display: inline-block;
     position: relative;
-    top: -250px;
-    left: 120px;
+    top: -200px;
+    left: 520px;
     width: 20px;
     height: 20px;
 }
@@ -61,7 +64,25 @@ body {
 .label-infantil {
     display: inline-block;
     position: relative;
-    top: -250px;
-    left: 120px;
+    top: -200px;
+    left: 520px;
+    color: #fff;
+}
+/*Fin del checkbox*/
+
+
+/* Continuar & Cancelar */
+.continuar, .cancelar {
+    background: #fff;
+    width: 130px;
+    height: 34px;
+    border: none;
+    color: black;
+    margin: 10px 20px;
+}
+
+.continuar:hover, .cancelar:hover{
+    box-shadow: 0px 0px 10px 1px red;
+    background: red;
     color: #fff;
 }
