--- a/login1/styles.css
+++ b/login1/styles.css
@@ -9,38 +9,57 @@ body {
 
 /*Contenedor central*/
 .div-centrado {
-    position: relative;
+    display: grid;
+    grid-template-columns: 20% 20% 20% 20% 20%;
+    grid-template-rows: 15% 10% 10% 5% 25% 10% 15%;
     margin: 40px auto;
-    width: 700px;
-    height: 700px;
+    width: 800px;
+    height: 500px;
+}
+
+.linea1 {
+    width: 800px;
+    height: 1px;
+    background: grey;
+    grid-row: 3;
+    grid-column: 1/6;
+}
+
+.linea2 {
+    width: 800px;
+    height: 1px;
+    background: grey;
+    grid-row: 7;
+    grid-column: 1/6;
 }
 
 .logo-netflix {
-    margin-left: 40px;
+    margin-left: 30px;
 }
 
 .div-centrado__titulo {
     color: white;
+    font-size: 40px;
+    grid-column: 1/4;
+    grid-row: 1
 }
 
 .div-centrado__subtitulo {
     color: grey;
-    border-bottom: 1px solid grey;
-    padding-bottom: 20px;
+    grid-row: 2;
+    grid-column: 1/4;
 }
 
 .logo-usuario {
-    margin: 20px;
-    border-bottom: 1px solid grey;
-    padding-bottom: 30px;
+    grid-row: 4;
+    grid-column: 1;
 }
 
 .input-usuario {
+    grid-column: 2;
+    grid-row: 4;
     width: 350px;
-    height: 25px;
-    display: inline-block;
-    position: relative;
-    top: -220px;
+    height: 35px;
     outline: none;
     background: #666;
     color: #fff;
@@ -53,20 +72,16 @@ body {
 
 /*Checkbox*/
 .checkbox-infantil {
-    display: inline-block;
-    position: relative;
-    top: -200px;
-    left: 520px;
     width: 20px;
     height: 20px;
+    grid-column: 6;
+    grid-row: 4;
 }
 
 .label-infantil {
-    display: inline-block;
-    position: relative;
-    top: -200px;
-    left: 520px;
     color: #fff;
+    grid-column: 5;
+    grid-row: 4;
 }
 /*Fin del checkbox*/
 
@@ -78,11 +93,19 @@ body {
     height: 34px;
     border: none;
     color: black;
-    margin: 10px 20px;
+    grid-row: 6;
 }
 
 .continuar:hover, .cancelar:hover{
     box-shadow: 0px 0px 10px 1px red;
     background: red;
     color: #fff;
+}
+
+.continuar {
+    grid-column: 3;
+}
+
+.cancelar {
+    grid-column: 4;
 }
