--- a/login1/styles.css
+++ b/login1/styles.css
@@ -10,54 +10,58 @@ body {
 /*Contenedor central*/
 .div-centrado {
     display: grid;
-    grid-template-columns: 20% 20% 20% 20% 20%;
-    grid-template-rows: 15% 10% 10% 5% 25% 10% 15%;
+    grid-template-areas:
+    "titulo titulo titulo titulo"
+    "subtitulo subtitulo subtitulo subtitulo"
+    "linea linea linea linea"
+    "logo-usuario input-usuario label-checkbox checkbox"
+    "linea2 linea2 linea2 linea2"
+    "continuar cancelar . .";
+    grid-template-columns: 25% 55% 15% 1%;
+    grid-template-rows: 15% 10% auto auto auto 15%;
     margin: 40px auto;
-    width: 800px;
-    height: 500px;
+    gap: 20px;
+    width: 700px;
+    height: 450px;
 }
 
 .linea1 {
     width: 800px;
     height: 1px;
     background: grey;
-    grid-row: 3;
-    grid-column: 1/6;
+    grid-area: linea;
 }
 
 .linea2 {
     width: 800px;
     height: 1px;
     background: grey;
-    grid-row: 7;
-    grid-column: 1/6;
+    grid-area: linea2;
 }
 
 .logo-netflix {
     margin-left: 30px;
 }
 
+/*Contenido principal*/
 .div-centrado__titulo {
     color: white;
     font-size: 40px;
-    grid-column: 1/4;
-    grid-row: 1
+    grid-area: titulo;
 }
 
 .div-centrado__subtitulo {
     color: grey;
-    grid-row: 2;
-    grid-column: 1/4;
+    grid-area: subtitulo;
 }
 
 .logo-usuario {
-    grid-row: 4;
-    grid-column: 1;
+    grid-area: logo-usuario;
+    border-radius: 7px;
 }
 
 .input-usuario {
-    grid-column: 2;
-    grid-row: 4;
+    grid-area: input-usuario;
     width: 350px;
     height: 35px;
     outline: none;
@@ -70,42 +74,45 @@ body {
     color: #fff;
 }
 
-/*Checkbox*/
-.checkbox-infantil {
+/*Contenido secundario*/
+.checkbox {
     width: 20px;
     height: 20px;
-    grid-column: 6;
-    grid-row: 4;
+    grid-area: checkbox;
 }
 
-.label-infantil {
+.label-checkbox {
     color: #fff;
-    grid-column: 5;
-    grid-row: 4;
+    grid-area: label-checkbox;
 }
-/*Fin del checkbox*/
+/*Fin del contenido*/
 
 
-/* Continuar & Cancelar */
-.continuar, .cancelar {
+/* Continuar & Cancelar con sus hovers*/
+.continuar {
     background: #fff;
-    width: 130px;
-    height: 34px;
+    width: 150px;
+    height: 35px;
     border: none;
     color: black;
-    grid-row: 6;
+    grid-area: continuar;
 }
 
-.continuar:hover, .cancelar:hover{
-    box-shadow: 0px 0px 10px 1px red;
+.continuar:hover {
     background: red;
     color: #fff;
 }
 
-.continuar {
-    grid-column: 3;
+.cancelar {
+    background: transparent;
+    width: 150px;
+    height: 35px;
+    border: 1px solid grey;
+    color: grey;
+    grid-area: cancelar;
 }
 
-.cancelar {
-    grid-column: 4;
+.cancelar:hover {
+    border: 1px solid #fff;
+    color: #fff;
 }
