--- a/netflix-login/netflix-login.css
+++ b/netflix-login/netflix-login.css
@@ -3,23 +3,23 @@
     margin: 0;
 }
 
-body {
+/*Opacando el fondo*/
+html {
+    position: relative;
     background-size: cover;
-    background-color: rgba(255, 255, 255, 0.5);
     background-image: url("netflix-background.jpg");
+    background-color: rgba(0, 0, 0, 0.5);
 }
-
-.backgound {
-    height: 100%;
-    width: 100%;
+body::before {
+    content: ''; /* Crea un pseudo-elemento */
     position: absolute;
-    z-index: -1;
-    overflow: hidden;
-    opacity: 9;
-    min-height: 100%;
-    min-width: 100%;
-    object-fit: content;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.5);
 }
+/*Fin de opacidad*/
 
 .login {
     display: flex;
@@ -32,7 +32,7 @@ body {
     box-sizing: border-box;
     margin: 80px auto;
 }
-/*Organización de filas GRID*/
+
 .inicia-sesion { /*El texto de iniciar sesión*/
     padding-right: 140px;
     color: #fff;
