Cambios mínimos en el js y login

--- a/netflix-login/netflix-login.css
+++ b/netflix-login/netflix-login.css
@@ -1,6 +1,7 @@
 * {
     padding: 0;
     margin: 0;
+    font-family: sans-serif, Georgia, 'Times New Roman', Times, serif;
 }
 
 /*Opacando el fondo*/
@@ -11,7 +12,7 @@ html {
     background-color: rgba(0, 0, 0, 0.5);
 }
 body::before {
-    content: ''; /* Crea un pseudo-elemento */
+    content: '';
     position: absolute;
     top: 0;
     right: 0;
@@ -19,6 +20,7 @@ body::before {
     left: 0;
     background-color: rgba(0, 0, 0, 0.5);
 }
+
 /*Fin de opacidad*/
 
 .login {
@@ -31,29 +33,18 @@ body::before {
     height: 530px;
     box-sizing: border-box;
     margin: 80px auto;
+    padding: 20px;
+    border-radius: 5px;
 }
 
 .inicia-sesion { /*El texto de iniciar sesión*/
     padding-right: 140px;
     color: #fff;
 }
-.input-usuario {
+.input-usuario, .input-password {
     width: 300px;
     height: 40px;
-    display: block;
     margin-top: 50px;
-    border-radius: 4px;
-    background: #333;
-    font-size: 25px;
-    border: none;
-    padding: 5px;
-    color: #fff;
-}
-.input-password {
-    display: block;
-    margin-top: 40px;
-    width: 300px;
-    height: 40px;
     border-radius: 4px;
     background: #333;
     font-size: 25px;
@@ -66,8 +57,8 @@ body::before {
     color: #8c8c8c;
     font-size: 18px;
 }
+
 .submit {
-    display: block;
     margin: 40px auto 0 auto;
     width: 300px;
     height: 45px;
@@ -84,8 +75,7 @@ body::before {
 .recuerdame-checkbox {
     margin-right: 50px; 
 }
-.help {
-}
+
 .suscribete {
     margin: 50px auto;
     color: #fff;
