--- a/netflix-login/netflix-login.css
+++ b/netflix-login/netflix-login.css
@@ -28,7 +28,7 @@ body::before {
     flex-direction: column;
     align-items: center;
     background: #000;
-    opacity: 0.9;
+    opacity: 0.8;
     width: 390px;
     height: 530px;
     box-sizing: border-box;
@@ -38,13 +38,13 @@ body::before {
 }
 
 .inicia-sesion { /*El texto de iniciar sesión*/
-    padding-right: 140px;
+    padding-right: 120px;
     color: #fff;
 }
 .input-usuario, .input-password {
     width: 300px;
     height: 40px;
-    margin-top: 50px;
+    margin-top: 40px;
     border-radius: 4px;
     background: #333;
     font-size: 25px;
@@ -65,9 +65,14 @@ body::before {
     border-radius: 4px;
     font-size: 20px;
     padding: 5px;
+    margin: 20px 0px;
     border: none;
     background-color: #e50914;
     color: #fff;
+}
+.submit:hover {
+    color: #000;
+    background-color: #fff;
 }
 .recuerdame {
     color: grey;
@@ -80,9 +85,12 @@ body::before {
     margin: 50px auto;
     color: #fff;
 }
+/*Aviso de Google reCAPTCHA*/
 .aviso {
     color: grey;
+    margin: 0px 25px;
 }
+/*Los link de "suscribete" y "¿necesitas ayuda?"*/
 a {
     color: #fff;
 }
