--- a/netflix-login/netflix-login.css
+++ b/netflix-login/netflix-login.css
@@ -69,6 +69,7 @@ body::before {
     border: none;
     background-color: #e50914;
     color: #fff;
+    cursor: pointer;
 }
 .submit:hover {
     color: #000;
